--- a/deployment.yaml
+++ b/deployment.yaml
@@ -12,7 +12,7 @@ spec:
   template:
     metadata:
       labels:
-        app: nsshowcase
+        app: showcase
     spec:
       containers:
         - name: showcase
