--- a/.github/workflows/showcase-workflow.yml
+++ b/.github/workflows/showcase-workflow.yml
@@ -48,9 +48,9 @@ jobs:
         run: make deploy 
       - name: Create new file and upload it to blob container
         run: |
-          export AZURE_STORAGE_ACCOUNT=${{ secrets.AZURE_STORAGE_ACCOUNT }}
-          export AZURE_STORAGE_ACCESS_KEY=${{ secrets.AZURE_STORAGE_ACCESS_KEY }}
-          
+          export AZURE_STORAGE_ACCOUNT=$AZURE_STORAGE_ACCOUNT
+          export AZURE_STORAGE_ACCESS_KEY=$AZURE_STORAGE_ACCESS_KEY
+          env
           mkdir -p /tmp/showcase
           touch /tmp/showcase/build_number_$(date '+%Y%m%d%H%M%S').txt 
 
