--- a/.github/workflows/showcase-workflow.yml
+++ b/.github/workflows/showcase-workflow.yml
@@ -52,11 +52,7 @@ jobs:
           SERVICE_PRINCIPAL_SECRET: ${{ secrets.SERVICE_PRINCIPAL_SECRET }}
           SERVICE_PRINCIPAL_TENANT: ${{ secrets.SERVICE_PRINCIPAL_TENANT }}
         run: |
-          az login \
-          --service-principal \
-          --username $(SERVICE_PRINCIPAL_APP_ID) \
-          --password $(SERVICE_PRINCIPAL_SECRET) \
-          --tenant $(SERVICE_PRINCIPAL_TENANT)
+          az login --service-principal --username $(SERVICE_PRINCIPAL_APP_ID) --password $(SERVICE_PRINCIPAL_SECRET) --tenant $(SERVICE_PRINCIPAL_TENANT)
           echo "end az login"
           export AZURE_STORAGE_ACCOUNT=$AZURE_STORAGE_ACCOUNT
           export AZURE_STORAGE_ACCESS_KEY=$AZURE_STORAGE_ACCESS_KEY
