--- a/.github/workflows/showcase-workflow.yml
+++ b/.github/workflows/showcase-workflow.yml
@@ -56,7 +56,7 @@ jobs:
 
           cd /tmp/showcase/
           # Upload sample files to container
-          az storage blob upload-batch --connection-string ${{ secrets.AZURE_STORAGE_CONNECTION_STRING }} -d showcase -s . --overwrite
+          az storage blob upload-batch --connection-string "${{ secrets.AZURE_STORAGE_CONNECTION_STRING }}" -d showcase -s . --overwrite
 
    Commit-Next-Loop-Parallel-Jobs:
     timeout-minutes: 10
