change registry to docker hub

--- a/deployment.yaml
+++ b/deployment.yaml
@@ -16,7 +16,8 @@ spec:
     spec:
       containers:
         - name: showcase
-          image: acrshowcase.azurecr.io/showcase:VERSION-SHA
+          #image: acrshowcase.azurecr.io/showcase:VERSION-SHA
+          image: achebel/showcase:VERSION-SHA
           env:
           - name: BUILD
             value: "VERSION"         
