--- a/.github/workflows/showcase-workflow.yml
+++ b/.github/workflows/showcase-workflow.yml
@@ -16,19 +16,13 @@ jobs:
         with:
           token: ${{ secrets.MYPAT }}
       - name: Build image
-        env:
-          ACR_NAME: ${{ secrets.ACR_NAME }}
         run: make build
-      - name: Login to container registry
-        env:
-          SERVICE_PRINCIPAL_APP_ID: ${{ secrets.SERVICE_PRINCIPAL_APP_ID }}
-          SERVICE_PRINCIPAL_SECRET: ${{ secrets.SERVICE_PRINCIPAL_SECRET }}
-          SERVICE_PRINCIPAL_TENANT: ${{ secrets.SERVICE_PRINCIPAL_TENANT }}
-          ACR_NAME: ${{ secrets.ACR_NAME }}
-        run: make registry-login
-      - name: Push image
-        env:
-          ACR_NAME: ${{ secrets.ACR_NAME }}
+      - name: Login to Docker Hub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
+      - name: Push Docker image
         run: make push
       - name: Get AKS credentials
         env:
@@ -52,7 +46,7 @@ jobs:
           git config user.email "achebel75@gmail.com" 
           git config user.name "Ali Chebel"
           git add .
-          git commit -m "update version file" && git push https://$MYPAT@github.com/achebel75/showcase.git HEAD:main        
+          git commit -m "showcase #$version)" && git push https://$MYPAT@github.com/achebel75/showcase.git HEAD:main        
 
 
 
