--- a/.github/workflows/showcase-workflow.yml
+++ b/.github/workflows/showcase-workflow.yml
@@ -55,4 +55,4 @@ jobs:
           git config user.email "achebel75@gmail.com" 
           git config user.name "Ali Chebel"
           git add .
-          git commit -m "showcase #$version)" && git push https://$MYPAT@github.com/achebel75/showcase.git HEAD:main        
+          git commit -m "showcase #$version" && git push https://$MYPAT@github.com/achebel75/showcase.git HEAD:main        
