--- a/deployment.yaml
+++ b/deployment.yaml
@@ -27,7 +27,17 @@ spec:
                 key:  connectionstring
           ports:
           - containerPort: 80
-            name: poc-helloworld          
+            name: showcase     
+          livenessProbe:
+            httpGet:
+              path: /
+              port: 80
+            initialDelaySeconds: 1
+            periodSeconds: 1  
+            failureThreshold: 3
+            successThreshold: 1
+            timeoutSeconds: 7 
+     
 ---
 apiVersion: v1
 kind: Service
